--- a/test-output/extent-reports/extent-report.html
+++ b/test-output/extent-reports/extent-report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Secure Test Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Apr 14, 2025 11:48:58 PM</span></a>
+<a href="#"><span class="badge badge-primary">Apr 15, 2025 12:01:01 AM</span></a>
 </li>
 </ul>
 </div>
@@ -87,13 +87,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Apr 14, 2025 11:48:58 PM</h3>
+<h3>Apr 15, 2025 12:01:01 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Apr 14, 2025 11:49:20 PM</h3>
+<h3>Apr 15, 2025 12:01:23 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
